# manim122

./: .gitignore  README.md  index.html  main.py  pyproject.toml
example/: index.html  main.py
example/slides/: ConvertExample.json
manim122_lib/: __init__.py
manim122lib/: binary_tree.py  pyproject.toml
manim122lib/src/manim122lib/: __init__.py  binary_tree.py  chonk.py  queue.py
pc13/: index.html  main.py
pc13/outline/: index.html
pc13/slides/: PC13.json
