[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manim122lib"
version = "0.1.0"
description = "Custom Manim library for visualizing concepts in CMU's 15-122 Principles of Imperative Computation course"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "manim>=0.19.0",
    "manim-slides>=5.5.1",
    "pyqt6>=6.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/manim122lib"]
